...
            "value" : "Mind Stamps"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "呆胶布"
          }
        }
      }
    },
    "extensions.module.projects.subtitle" : {
      "extractionState" : "stale",
...
            "value" : "Edit Mind Stamp"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "编辑呆胶布"
          }
        }
      }
    },
    "mindstamp.editor.images" : {
      "localizations" : {
...
            "value" : "Pending"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "未来"
          }
        }
      }
    },
    "pending.total_weeks" : {
      "localizations" : {
...
            "value" : "Delete Task"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "删除任务"
          }
        }
      }
    },
    "project.task.delete.confirm" : {
      "localizations" : {
...
            "value" : "Extensions"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "扩展"
          }
        }
      }
    },
    "tab.past" : {
      "localizations" : {
...
            "value" : "Me"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "我的"
          }
        }
      }
    },
    "tab.today" : {
      "localizations" : {
...
    "个性化" : {

    },
    "临近截止" : {

    },
    "主题" : {

    },
    "也可拖动或双指缩放浏览" : {

    },
    "交换" : {
...
    "今日呆胶布" : {

    },
    "今日已过期" : {

    },
    "今日节奏" : {

    },
    "从最近恢复点还原" : {

    },
    "从归档恢复" : {
...
    "在这里记录任务思绪" : {

    },
    "在这里记录未决定具体时限的任务" : {

    },
    "外观与主题" : {

    },
    "完成任务保留详情；过期任务仅保留数量。" : {

    },
    "完成编辑" : {
...
